--- a/package.json
+++ b/package.json
@@ -21,7 +21,41 @@
     "url": "https://github.com/neverendingqs/netlify-express/issues"
   },
   "homepage": "https://github.com/neverendingqs/netlify-express#readme",
-  "dependencies": {},
+  "dependencies": {
+    "@slack/client": "^5.0.1",
+    "axios": "^0.18.1",
+    "bcryptjs": "2.4.3",
+    "bluebird": "^3.5.3",
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
+    "dotenv-safe": "^6.1.0",
+    "express": "^4.17.1",
+    "express-validation": "^1.0.2",
+    "handlebars": "^4.1.2",
+    "helmet": "^3.21.1",
+    "http-status": "^1.3.1",
+    "joi": "^14.3.1",
+    "jwt-simple": "0.5.5",
+    "lodash": "^4.17.11",
+    "method-override": "^3.0.0",
+    "moment-timezone": "^0.5.23",
+    "mongoose": "^5.10.12",
+    "morgan": "^1.9.1",
+    "mstime": "^0.6.4",
+    "multer": "^1.4.1",
+    "netlify-lambda": "^2.0.1",
+    "nodemailer": "^6.1.1",
+    "nodemailer-mailgun-transport": "^1.4.0",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "4.0.0",
+    "serverless-http": "^2.6.0",
+    "socket.io": "^2.2.0",
+    "spdy": "^4.0.0",
+    "uuid": "^3.3.2"
+  },
   "devDependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
